Fixed z-indexing on the title

--- a/assets/style/maincontentstyle.css
+++ b/assets/style/maincontentstyle.css
@@ -25,6 +25,7 @@
     height: 50px;
     align-items: center; 
     font-size: 36px;
+    z-index: 2;
 }
 
 .body{
@@ -35,7 +36,7 @@
 
 .hack{
     position: fixed;
-    z-index: -1;
+    z-index: 1;
     width:100%;
     background: #11101d;
     height:50px;
